--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -4,8 +4,8 @@
 }
 
 @font-face {
-    font-family: 'Gill Sans MT';
-    src: url('../fonts/Gill-Sans-MT.ttf');
+    font-family: 'Trebuchet MS';
+    src: url('../fonts/Trebuchet-MS.ttf');
 }
 
 * {
@@ -41,7 +41,7 @@ body {
 h1 {
     font-size: 59px;
     color: goldenrod;
-    font-family; 'Gill Sans MT';
+    font-family; 'Trebuchet MS';
 }
 
 #message-el {
