--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -130,6 +130,7 @@ canvas {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Gill Sans', sans-serif;
     z-index: 2000;
 }
 
