--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -40,7 +40,7 @@ body {
 h1 {
     font-size: 59px;
     color: goldenrod;
-    font-family; 'Trebuchet MS';
+    font-family: 'Trebuchet MS';
 }
 
 #message-el {
